--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "normalize.css": "^8.0.1",
-    "vue": "^3.0.0"
+    "vue": "^3.0.0",
+    "vue-types": "3"
   },
   "devDependencies": {
+    "@types/node": "^14.14.35",
+    "@types/webpack": "^4.41.26",
+    "@types/webpack-env": "^1.16.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
@@ -28,6 +32,7 @@
     "eslint-plugin-vue": "^7.0.0",
     "eslint-plugin-vue-a11y": "^0.0.31",
     "eslint-plugin-vue-scoped-css": "^1.1.0",
+    "eslint-plugin-vue-types": "^2.0.0",
     "node-sass": "^4.12.0",
     "prettier": "^2.2.1",
     "sass-loader": "^8.0.2"
