--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "http://NN-coder.github.io/weather-app",
   "name": "weather-app",
   "version": "0.1.0",
   "private": true,
@@ -12,7 +11,8 @@
     "core-js": "^3.6.5",
     "normalize.css": "^8.0.1",
     "vue": "^3.0.0",
-    "vue-types": "3"
+    "vue-types": "3",
+    "vuex": "^4.0.0-0"
   },
   "devDependencies": {
     "@types/node": "^14.14.35",
@@ -20,6 +20,7 @@
     "@types/webpack-env": "^1.16.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-airbnb": "^5.3.0",
@@ -36,5 +37,6 @@
     "node-sass": "^4.12.0",
     "prettier": "^2.2.1",
     "sass-loader": "^8.0.2"
-  }
+  },
+  "homepage": "http://NN-coder.github.io/weather-app"
 }
