--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
+  "homepage": "http://NN-coder.github.io/weather-app",
   "name": "weather-app",
   "version": "0.1.0",
   "private": true,
+  "repository": "git@github.com:NN-coder/weather-app.git",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -11,6 +13,7 @@
     "core-js": "^3.6.5",
     "normalize.css": "^8.0.1",
     "vue": "^3.0.0",
+    "vue-router": "^4.0.0-0",
     "vue-types": "3",
     "vuex": "^4.0.0-0"
   },
@@ -20,23 +23,23 @@
     "@types/webpack-env": "^1.16.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-airbnb": "^5.3.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
+    "eslint": "^7.22.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-sonarjs": "^0.6.0",
-    "eslint-plugin-vue": "^7.0.0",
+    "eslint-plugin-vue": "^7.8.0",
     "eslint-plugin-vue-a11y": "^0.0.31",
     "eslint-plugin-vue-scoped-css": "^1.1.0",
     "eslint-plugin-vue-types": "^2.0.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "4.14.1",
     "prettier": "^2.2.1",
-    "sass-loader": "^8.0.2"
-  },
-  "homepage": "http://NN-coder.github.io/weather-app"
+    "sass-loader": "8.0.2"
+  }
 }
