--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "yarn build && gh-pages -d dist"
   },
   "dependencies": {
     "core-js": "^3.6.5",
@@ -38,6 +39,7 @@
     "eslint-plugin-vue-a11y": "^0.0.31",
     "eslint-plugin-vue-scoped-css": "^1.1.0",
     "eslint-plugin-vue-types": "^2.0.0",
+    "gh-pages": "^3.1.0",
     "node-sass": "4.14.1",
     "prettier": "^2.2.1",
     "sass-loader": "8.0.2"
