--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
-  "homepage": "http://NN-coder.github.io/weather-app",
   "name": "weather-app",
   "version": "0.1.0",
   "private": true,
-  "repository": "git@github.com:NN-coder/weather-app.git",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -22,14 +20,18 @@
     "@types/node": "^14.14.35",
     "@types/webpack": "^4.41.26",
     "@types/webpack-env": "^1.16.0",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-airbnb": "^5.3.0",
     "@vue/eslint-config-prettier": "^6.0.0",
+    "@vue/eslint-config-typescript": "^7.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.22.0",
     "eslint-plugin-prettier": "^3.3.1",
@@ -42,6 +44,9 @@
     "gh-pages": "^3.1.0",
     "node-sass": "4.14.1",
     "prettier": "^2.2.1",
-    "sass-loader": "8.0.2"
-  }
+    "sass-loader": "8.0.2",
+    "typescript": "~4.1.5"
+  },
+  "homepage": "http://NN-coder.github.io/weather-app",
+  "repository": "git@github.com:NN-coder/weather-app.git"
 }
